--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     </div>
   </header>
   <main class="main">
-    <!-- <div class="row description__row clearfix">
+    <div class="content main__content container">
+      <div class="main__text">
+        Семинар “Секс и духовное развитие” 14-16 декабря, Москва, Алексей Жгутов
+      </div>
+      <p class="content__text">
+        Уникальный в своем роде семинар, созданный  Алексеем Жгутовым, объединивший в себе собранные  у разных мастеров в Китае, Тибете, Непале и Тайланде теоретические и практические знания тантрической йоги и даосского учения, которые превосходно дополняют друг-друга и дают целостную картину о сексуальных взаимоотношениях и работе с сексуальными энергиями.
+      </p>
+      <div class="description content__description clearfix">
+        <div class="row description__row clearfix">
           <div class="row__left">
             <div class="row__text row__text_white uppercase">
               <div class="description__title description__title_left uppercase">
@@ -28,154 +36,141 @@
           </div>
           <div class="row__img">
             <img src="img/list-img.jpg" alt="Секс и Духовное развитие" class="list-img">
-          </div>
-        </div> -->
-    <div class="content main__content container">
-      <div class="main__text">
-        Семинар “Секс и духовное развитие” 14-16 декабря, Москва, Алексей Жгутов
-      </div>
-      <p class="content__text">
-        Уникальный в своем роде семинар, созданный  Алексеем Жгутовым, объединивший в себе собранные  у разных мастеров в Китае, Тибете, Непале и Тайланде теоретические и практические знания тантрической йоги и даосского учения, которые превосходно дополняют друг-друга и дают целостную картину о сексуальных взаимоотношениях и работе с сексуальными энергиями.
-      </p>
-      
-      <div class="description content__description clearfix">
-        <!-- <div class="description__title uppercase">
-          Цели:
-        </div> -->
-        
-        <div class="list description__list">
-          <div class="list__left">
-            <div class="row__text list__item uppercase">
-              <div class="icon row__icon">
-                <i class="far fa-check-circle"></i>
-              </div>
-                Полноценные сексуальные отношения
-            </div>
-            <div class="row__text list__item uppercase">
-              <div class="icon row__icon">
-                <i class="far fa-check-circle"></i>
-              </div>
-              Повышение активности и иммунитета
             </div>
           </div>
-          <div class="list__right">
-            <div class="row__text list__item uppercase">
-              <div class="icon row__icon">
-                <i class="far fa-check-circle"></i>
+          <div class="description2 clearfix">
+            <div class="list2 description2__list content__description2 clearfix">
+              <div class="list2__left">
+                <div class="list2__text">
+                  <div class="icon list2__icon">
+                    <i class="far fa-check-circle"></i>
+                  </div>
+                    Открытие сердечного центра и стабилизация в состоянии Любви
+                </div>
+                <div class="list2__text">
+                  <div class="icon list2__icon">
+                    <i class="far fa-check-circle"></i>
+                  </div>
+                    Полноценные сексуальные отношения
+                </div>
+                <div class="list2__text list2__text_center">
+                  <div class="icon list2__icon">
+                      <i class="far fa-check-circle"></i>
+                  </div>
+                    Духовное развитие,ведущее к ПРОСВЕТЛЕНИЮ
+                </div>
               </div>
-              Открытие сердечного центра и стабилизация в состоянии Любви
+              <div class="list2__right">
+                <div class="list2__text">
+                  <div class="icon list2__icon">
+                      <i class="far fa-check-circle"></i>
+                  </div>
+                    Оздоровление и омоложение организма
+                </div>
+                <div class="list2__text">
+                  <div class="icon list2__icon">
+                    <i class="far fa-check-circle"></i>
+                  </div>
+                    Повышение активности и иммунитета
+                </div>
+              </div>
             </div>
-            <div class="row__text list__item uppercase">
-              <div class="icon row__icon">
-                <i class="far fa-check-circle"></i>
+            <div class="row description__row clearfix">
+              <div class="row__img">
+                <img src="img/list-img2.jpg" alt="Секс и духовное развитие" class="list-img">
               </div>
-                Оздоровление и омоложение организма
-            </div>
-          </div>
-        </div>
-        <div class="row description__row">
-          <div class="row__img">
-            <img src="img/list-img2.jpg" alt="Секс и духовное развитие" class="list-img">
-          </div>
-          <div class="row__left">
-            <div class="row__text row__text_white uppercase">
-              <!-- <div class="icon row__icon"> -->
-                <!-- <i class="far fa-check-circle"></i> -->
-              <!-- </div> -->
-              <div class="description__title uppercase">
-                В программе курса:
+              <div class="row__left">
+                <div class="row__text row__text_white uppercase">
+                  <div class="description__title uppercase">
+                    В программе курса:
+                  </div>
+                </div>
               </div>
-              <!-- Полноценные сексуальные отношения -->
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="description2 content__description2 clearfix">
-        <!-- <div class="description__title uppercase">
-          В программе курса:
-        </div> -->
-        <div class="list2 description2__list clearfix">
-          <div class="list2__left">
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
-              </div>
-              Управление оргазмическими состояниями и их развитие
-            </div>
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
-              </div>
-              Наполнение и активация сексуального центра
-            </div>
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
-              </div>
-              Управление менструальным циклом
             </div>
           </div>
-          <div class="list2__right">
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
+          <div class="description2 content__description clearfix">
+            <div class="list2 description2__list clearfix">
+              <div class="list2__left">
+                <div class="list2__text">
+                  <div class="icon list2__icon">
+                    <i class="fas fa-yin-yang"></i>
+                  </div>
+                    Управление оргазмическими состояниями и их развитие
+                </div>
+              <div class="list2__text">
+                <div class="icon list2__icon">
+                  <i class="fas fa-yin-yang"></i>
+                </div>
+                  Наполнение и активация сексуального центра
               </div>
-              Способы преобразования сексуальной энергии в Любовь и другие вибрации
+              <div class="list2__text">
+                <div class="icon list2__icon">
+                  <i class="fas fa-yin-yang"></i>
+                </div>
+                Способы преобразования сексуальной энергии в Любовь и другие вибрации
+              </div>
             </div>
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
+            <div class="list2__right">
+              <div class="list2__text">
+                <div class="icon list2__icon">
+                  <i class="fas fa-yin-yang"></i>
+                </div>
+                  Управление менструальным циклом
               </div>
-              Управление процессом семяизвержения
-            </div>
-            <div class="list2__text">
-              <div class="icon list2__icon">
-                <i class="fas fa-yin-yang"></i>
+              <div class="list2__text">
+                <div class="icon list2__icon">
+                  <i class="fas fa-yin-yang"></i>
+                </div>
+                  Управление процессом семяизвержения
               </div>
-              Парная работа
+              <div class="list2__text">
+                <div class="icon list2__icon">
+                  <i class="fas fa-yin-yang"></i>
+                </div>
+                  Парная работа
+              </div>
             </div>
           </div>
-        </div>
-        <p class="content__text content__text_bold">
-          <span class="uppercase">Внимание! Работа идет в парах!</span><br>Вы можете взять своего партнера, либо найти его у нас.
-          Любые сексуальные контакты между партнерами, а также за 10 дней до семинара,  запрещены!          
-        </p>
-      </div>
-      <div class="form main__form container">
-        <p class="form__title uppercase">
-          Записаться на семинар!
-        </p>
-        <form action="kris580303@gmail.com" method="post" class="appointment form__appointment">
-          <p class="appointment__item">
-            <label for="appointment__name">Ваше имя
-            </label>
-            <input id="appointment__name" class="input" type="text" name="name">
+          <p class="content__text content__text_bold">
+            <span class="uppercase">Внимание! Работа идет в парах!</span><br>Вы можете взять своего партнера, либо найти его у нас.
+              Любые сексуальные контакты между партнерами, а также за 10 дней до семинара,  запрещены!          
           </p>
-          <p class="appointment__item">
-            <label for="appointment__phone">Телефон
-            </label>
-            <input id="appointment__phone" class="input" type="text" name="phone">
+        </div>
+        <div class="form main__form container">
+          <p class="form__title uppercase">
+            Записаться на семинар!
           </p>
-          <button class="btn form__btn uppercase">
-            Записаться
-          </button>
-        </form>
+          <form action="" method="post" class="appointment form__appointment">
+            <p class="appointment__item">
+              <label for="appointment__name">Ваше имя
+              </label>
+              <input id="appointment__name" class="input" type="text" name="name">
+            </p>
+            <p class="appointment__item">
+              <label for="appointment__phone">Телефон
+              </label>
+              <input id="appointment__phone" class="input" type="text" name="phone">
+            </p>
+            <button class="btn form__btn uppercase">
+              Записаться
+            </button>
+          </form>
+        </div>
+        <div class="main__text">
+          Занятия: с 9.00 до 23.00<br>Стоимость: 15 000 рублей
+        </div>
       </div>
-      <div class="main__text">
-        Занятия: с 9.00 до 23.00<br>Стоимость: 15 000 рублей
-      </div>
-    </div>
   </main>
   <footer class="footer">
     <div class="information footer__information container">
       <div class="social footer__social">
-        <a href="#">
+        <a href="https://vk.com/sabi_center">
           <i class="fab fa-vk social__item"></i>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/zhgutov_alexey/?hl=ru">
           <i class="fab fa-instagram social__item"></i>
         </a>
-        <a href="#">
+        <a href="https://www.facebook.com/aazhgutov?ref=br_rs">
           <i class="fab fa-facebook-f social__item"></i>
         </a>
       </div>
